--- a/Steward Zhou/Steward Zhou.csproj
+++ b/Steward Zhou/Steward Zhou.csproj
@@ -9,4 +9,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Murong Xue\Murong Xue.csproj" />
+  </ItemGroup>
+
 </Project>
