--- a/RSSWindowsForm/RSSWindowsForm.csproj
+++ b/RSSWindowsForm/RSSWindowsForm.csproj
@@ -3,14 +3,14 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <RootNamespace>Steward_Zhou</RootNamespace>
+    <RootNamespace>RSSWindowsForm</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Murong Xue\RSSFetcher.csproj" />
+    <ProjectReference Include="..\RSSFetcher\RSSFetcher.csproj" />
   </ItemGroup>
 
   <ItemGroup>
