Create CommandLineArguments unit test

--- a/RSSFetcher/RSSFetcher.csproj
+++ b/RSSFetcher/RSSFetcher.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>RSSFetcher</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Configurations>Debug;Release;UnitTest</Configurations>
   </PropertyGroup>
 
 </Project>
